--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css");
+@import url("https://cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/themes/default.css");
+@import '~katex/dist/katex.css';
+html,
+body {
+  height: 100%;
+  background-color: #f5f5f5;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
