--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div *ngIf="auth.user | async as user; else showLogin">
     <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="http://www.github.com" target="_blank">Pencil assignment Eng/Mohamed Zoweil, Made with ❤️</a>
+    <a class="navbar-brand" href="https://github.com/Mazen-eng/Pencil-Assignment" target="_blank">Pencil assignment Eng/Mohamed Zoweil, Made with ❤️</a>
     <button class="btn btn-outline-info my-2 my-sm-0" (click)="logout()"> Logout</button>
   </nav>
   <h1 class="h3 mb-3 font-weight-normal" style="margin-top: 90px">
